--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -17,10 +17,12 @@
         android:id="@+id/back"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:layout_marginStart="10dp"
         android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:src="@drawable/ic_back"
         android:backgroundTint="@color/white"
-        android:layout_marginStart="10dp"/>
+        android:contentDescription="@string/activity_edit_iv2" />
 
     <TextView
         android:layout_width="wrap_content"
