--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dirty_white">#CDCDCD</color>
 
     <!-- Light mode colors -->
     <color name="light_colorPrimary">#3F51B5</color>
