--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".EditActivity">
 
   <RelativeLayout
+      android:id="@+id/topBar"
+      app:layout_constraintTop_toTopOf="parent"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_alignParentTop="true"
       android:background="?attr/colorPrimary"
       android:padding="20dp">
 
@@ -46,17 +47,30 @@
       android:id="@+id/editImage"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_centerInParent="true"
-      android:layout_margin="75dp"
-      android:contentDescription="@string/activity_edit_iv1" />
+      android:contentDescription="@string/activity_edit_iv1"
+      app:layout_constraintTop_toBottomOf="@id/topBar"
+      app:layout_constraintBottom_toTopOf="@id/borderSeekBar"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"/>
 
-  <HorizontalScrollView
+  <SeekBar
+      android:id="@+id/borderSeekBar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
+      android:layout_marginStart="10dp"
+      android:layout_marginEnd="10dp"
+      android:padding="7.5dp"
+      app:layout_constraintBottom_toTopOf="@id/toolBarContainer"/>
+
+  <HorizontalScrollView
+      android:id="@+id/toolBarContainer"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintBottom_toBottomOf="parent"
       android:scrollbars="none">
 
     <RelativeLayout
+        android:id="@+id/toolBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -236,4 +250,4 @@
 
   </HorizontalScrollView>
 
-  </RelativeLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
