--- a/app/src/main/res/drawable/custom_seekbar.xml
+++ b/app/src/main/res/drawable/custom_seekbar.xml
@@ -1,14 +1,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
-            <solid android:color="#4DE8E8E8"/> <!-- Background color -->
+            <solid android:color="@color/light_gray"/> <!-- Background color -->
             <corners android:radius="4dp"/> <!-- Rounded corners -->
         </shape>
     </item>
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="#F4F4F4"/> <!-- Progress color -->
+                <solid android:color="@color/gray"/> <!-- Progress color -->
                 <corners android:radius="4dp"/> <!-- Rounded corners -->
             </shape>
         </clip>
