--- a/app/src/main/res/drawable/custom_thumb.xml
+++ b/app/src/main/res/drawable/custom_thumb.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#F4F4F4"/>
+    <solid android:color="@color/gray"/>
     <size android:width="15dp" android:height="15dp"/>
 </shape>
