--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -253,4 +253,19 @@
 
   </HorizontalScrollView>
 
+  <RelativeLayout
+      android:visibility="gone"
+      android:id="@+id/progressBarLayout"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@color/loading_bg"
+      android:clickable="true">
+
+    <ProgressBar
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"/>
+
+  </RelativeLayout>
+
   </androidx.constraintlayout.widget.ConstraintLayout>
