--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".EditActivity">
+    tools:context=".EditActivity"
+    android:background="?attr/backgroundColor">
 
   <RelativeLayout
       android:id="@+id/topBar"
@@ -63,7 +65,6 @@
       android:progressDrawable="@drawable/custom_seekbar"
       android:thumb="@drawable/custom_thumb"
       app:layout_constraintBottom_toTopOf="@id/toolBarContainer"/>
-
 
   <HorizontalScrollView
       android:id="@+id/toolBarContainer"
@@ -252,6 +253,66 @@
     </RelativeLayout>
 
   </HorizontalScrollView>
+
+  <RelativeLayout
+      android:visibility="gone"
+      android:id="@+id/backgroundBar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="?attr/colorPrimary"
+      app:layout_constraintBottom_toBottomOf="parent"
+      android:gravity="center"
+      android:padding="20dp">
+
+    <LinearLayout
+        android:id="@+id/blackBackground"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginStart="30dp">
+
+      <ImageView
+          android:layout_width="25dp"
+          android:layout_height="25dp"
+          android:src="@drawable/circle_black"/>
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/activity_edit_tv10"
+          android:textColor="@color/dirty_white"
+          android:textSize="12sp"
+          android:layout_marginTop="5dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/whiteBackground"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_toEndOf="@id/blackBackground"
+        android:layout_marginStart="30dp">
+
+      <ImageView
+          android:layout_width="25dp"
+          android:layout_height="25dp"
+          android:src="@drawable/circle"/>
+
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="@string/activity_edit_tv11"
+          android:textColor="@color/dirty_white"
+          android:textSize="12sp"
+          android:layout_marginTop="5dp"/>
+
+    </LinearLayout>
+
+  </RelativeLayout>
+
 
   <RelativeLayout
       android:visibility="gone"
