--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/light_colorPrimary</item>
         <item name="colorPrimaryDark">@color/light_colorPrimaryDark</item>
+        <item name="backgroundColor">@color/dirty_white</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
